test/errors/field_names_error/zs/reserved_java_keyword_error.zs
package reserved_java_keyword_error;

struct Item
{
    uint16  param;
    uint32  abstract;   // reserved keyword in generated Java code
};
